3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Apply modified patch #1396303 (add setting to disable stealing from players)
by Terry Brown. It adds a new option "no_player_stealing" to the settings
file. If set, it prevents players from stealing from other players. It
defaults to ON.
--
doc/settings: Add documentation for new setting.
include/global.h: Add new field to settings structure.
lib/settings: Add new option no_player_stealing.
server/init.c: In load_settings() recognizes the new option.
server/skills.c: In attempt_steal() prevent stealing from PLAYER if option is
   set.
Andreas Kirschbaum 2006-01-08

include/newserver.h, socket/{init.c,request.c}: Remove unused fields ext2 and
   ext_title_flag from NewSocket structure.
server/skills.c: Fix/improve feedback messages for stealing skill.
plugins/cfpython/cfpython.c, server/plugins.c: Just whitespace changes to make
   it conform to programming_guide.
plugins/cfpython/cfpython.c: Make sure context->options always is initialized.
server/main.c: Make code more readable; use snprintf where appropriate.
crossedit/Cnv/CnvPrompt.c: Make file compilable with Ansi C89 compiler.
Andreas Kirschbaum 2006-01-08

Global event Python scripts now are in subdirectories. This makes it easier to
 distribute "Python packages". Modified file:
  plugins/cfpython/cfpython.c
Ryo 2006-01-07

common/{item.c,treasure.c}, server/{apply.c,gods.c,spell_effect.c}: Use named
   constants instead of numbers.
server/monster.c: Use correct field name in move_monster().
Andreas Kirschbaum 2006-01-07

Summon pets less often to the owner on tiled maps.
--
server/pets.c: In remove_all_pets() and pet_move() use on_same_map() to check